--- a/src/styles.css
+++ b/src/styles.css
@@ -71,9 +71,13 @@ body {
   width: 34px;
 }
 
+.square.winner {
+  background-color: rgb(128, 255, 128);
+}
+
 .board-row:after {
   clear: both;
-  content: '';
+  content: "";
   display: table;
 }
 
